<resources>
    <string name="app_name">Just Java</string>

    <string name="quantity">Quantity</string>
    <string name="action_settings">Settings</string>
    <string name="quantityamount">0</string>
    <string name="price">Price</string>
    <string name="priceamount">Total:$0</string>
    <string name="order">Order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
