<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAllCaps="true"/>
    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/plus"
        android:onClick="increment"
        android:id="@+id/plusButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantityamount"
        android:id="@+id/quantity_text_view"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textColor="#000000"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" />
    <Button
        android:id="@+id/minusButton"
        android:enabled="false"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/minus"
        android:onClick="decrement"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAllCaps="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceamount"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:id="@+id/price_text_view"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder"
        android:id="@+id/orderButton"
        android:enabled="false"/>

</LinearLayout>
